# drbot

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_EC2.md  Dockerfile  Dockerfile.fly  QUICKSTART.md  README.md  SIFBOT_PROMPT.md  TEST_FLY_LOCALLY.md  TROUBLESHOOTING.md  docker-compose.fly.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  nginx.conf  pyproject.toml  requirements.txt  test_fly_setup.sh  test_setup.sh
app/: __init__.py  config.py  main.py  rag.py
cdk/: .gitignore  AUTO_DEPLOY.md  CHECK_USER_DATA.md  FIX_CURRENT_INSTANCE.md  QUICKSTART.md  README.md  SSH_ACCESS.md  VIEW_LOGS.md  cdk.json  check_ollama.sh  fix_current_instance.sh  package-lock.json  package.json  setup_instance.sh  start_app.sh
cdk/lib/: drp-spokesbot-stack.ts
data/: .gitkeep  democratic_republicans_wikipedia.txt  platform.txt
drp_platform/embeddings/: drp_embeddings.jsonl  index_config.yaml
drp_platform/metadata/: changelog.txt  overview.txt  version.txt
drp_platform/platform/: 01_introduction.txt  02_core_principles.txt  03_candidate_selection.txt  04_transparency.txt  05A_reproductive_health.txt  05B_energy_environment.txt  05C_healthcare.txt  05D_economy_jobs.txt  05E_education.txt  05F_technology_privacy.txt  05G_governance_elections.txt  05H_immigration.txt  05I_defense_foreign.txt  05J_social_cohesion.txt  06_implementation.txt  07_vision.txt
scripts/: scrape_wikipedia.py  test_questions.py
static/: index.html
